--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <nav id="main-nav" class="navbar navbar-expand-lg bg-body-tertiary mb-3" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Music App</a>
+          <a class="navbar-brand" href="#">Salufy App</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
